--- a/portfolio.html
+++ b/portfolio.html
@@ -72,14 +72,42 @@
   <main id="main">
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>I learn and practice my knowledge and skill of the full-stack developer, WordPress and design in my free time after office hour or the weekend. 
-		  Therefore I could produce some creations. </p>
-		  
+	<!======= Data Analist =========>
+
+<div class="row" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>          
+              <li data-filter=".filter-web">Data Analyst</li>
+			  <li data-filter=".filter-card">Card</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-8.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Data Analyst 1</h4>
+                <p>Data Analyst</p>
+                <div class="http://artacyber.com/">
+                  <a href="assets/img/portfolio/portfolio-8.png" data-gall="portfolioGallery" class="venobox" title="Web 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-web1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+		
+	<!======= End Data Analist =========>
+
+
+
+		
+		
+	<!======= Web=========>	
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
@@ -134,6 +162,10 @@
             </div>
         </div>
 
+		<!======= End Web=========>
+
+
+		<!======= Card =========>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -193,19 +225,7 @@
             </div>
           </div>   
 
-		<div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 4</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 4"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details-cards.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>   
+	<!======= End Card =========>
 		
         </div>
 
