--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,9 @@
           <li><a href="contact.html">Contact</a></li>
 	  
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
+	    
+<!-- .nav-menu -->
 
       <div class="header-social-links">
         <a href="https://twitter.com/ahmad_saleh17" class="twitter"><i class="icofont-twitter"></i></a>
@@ -73,7 +75,7 @@
 
     <!-- ======= Portfolio Section ======= -->
 		
-	<!======= Web=========>	
+
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
@@ -128,10 +130,6 @@
             </div>
         </div>
 
-		<!======= End Web=========>
-
-
-		<!======= Card =========>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -191,7 +189,6 @@
             </div>
           </div>   
 
-	<!======= End Card =========>
 		
         </div>
 
