--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Certification</title>
+  <title>Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -74,7 +74,7 @@
 
   <main id="main">
 
-    <!-- ======= Certification Section ======= -->
+    <!-- ======= Portfolio Section ======= -->
   
   <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
@@ -122,7 +122,7 @@
 
 
        
-    </section><!-- End Certification Section -->
+    </section><!-- End Portfolio Section -->
 
   </main><!-- End #main -->
 
