--- a/portfolio.html
+++ b/portfolio.html
@@ -53,9 +53,9 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-	  <li class="active"><a href="certification.html">Certification</a></li>
-	  <li><a href="cv.html">Curriculum Vitae</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+	  			<li><a href="certification.html">Certification</a></li>
+	  			<li><a href="cv.html">Curriculum Vitae</a></li>
+          <li class="active"><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
 		  
         </ul>
