--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://maps.google.com/?q=5.322667,100.283389&output=svembed" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://maps.app.goo.gl/eC4FFpnMxCpjjYoDA" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
@@ -92,7 +92,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Elit Heights Condominium, Jalan Mayang Pasir, Bayan Baru, Penang, Malaysia</p>
+                <p>Taman Universiti, Sungai Tangkas, Kajang, Selangor</p>
               </div>
 
               <div class="email">
@@ -104,7 +104,7 @@
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+601131412542</p>
+                <p>+601123221908</p>
               </div>
 		       
             </div>
