--- a/cv.html
+++ b/cv.html
@@ -97,8 +97,8 @@
 			  I also possess a delicate balance of analytical and creative skills, along with excellent client facing skills.  </em></p>
               <p>
               <ul>
-                <li>Bayar Baru, Penang, Malaysia</li>
-                <li>+601131412542</li>
+                <li>Sungai Tangkas, Kajang, Malaysia</li>
+                <li>+601123221908</li>
                 <li>salehnst@gmail.com</li>
               </ul>
               </p>
