--- a/resume.html
+++ b/resume.html
@@ -102,8 +102,8 @@
 		      in working with others to achieve a certain objective on time.  </em></p>
               <p>
               <ul>
-                <li>Bayar Baru, Penang, Malaysia</li>
-                <li>+601131412542</li>
+                <li>Sg Tangkas,Kajang, Selangor, Malaysia</li>
+                <li>+601123221908</li>
                 <li>salehnst@gmail.com</li>
               </ul>
               </p>
