--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 February</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.ahmadsaleh.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +601131412542</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Penang, Malaysia</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +601123221908</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Sg Tangkas, Kajang, Selangor, Malaysia</li>
                 </ul>
               </div>
               <div class="col-lg-6">
