--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3984.554102795811!2d101.78956607922848!3d2.9435793467539177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwNTYnMzYuOSJOIDEwMcKwNDcnNDAuMCJF!5e0!3m2!1sen!2smy!4v1711521705081!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://maps.google.com/?q=2.943583, 101.794444&output=svembed" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
