--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,13 @@
 
 <div class="leftsidebar_templ1">
 	<ul id="nav">
-		
+
+		<li class="expanded"><a class="on"> <b>Gold Performance – Personal Project - Kuala Lumpur, Malaysia 2024</b></a> <a href="https://public.tableau.com/app/profile/ahmadsalehnasution/viz/GOLDPERFORMANCE/Dasboard">See the Project</a>
+			<ol class="submuneu">
+			<li><a>Create a dashboard with Tableau for the Gold Performance</li>
+			<li><a>Transformed and processed data by using Excel to ensure data completeness and validity</li>	
+			</ol>
+			
 		<li class="expanded"><a class="on"> <b>Exploratory Data Analysing 10 Top Indonesian Youtuber - Personal Project – Kula Lumpur, Malaysia 2023</b></a> <a href="https://github.com/artacyber/Exploratory-Data-Analysing-10-Top-Indonesian-Youtuber/blob/main/Exploratory%20Data%20Analysing%2010%20TOP%20Indonesian%20Youtuber.ipynb">See the Project</a>
 			<ol class="submuneu">
 			<li><a>Utilized Python to analyze the top 10 youtube channels in Indonesia and gain insights into statistics of video, sub-scribers, views </li>
@@ -103,7 +109,7 @@
 			</ol>
 
 
-			<li class="expanded"><a class="on"> <b>US Flight Dashboard – Personal Project - Kuala Lumpur, Malaysia 2023</b></a> <a href="https://public.tableau.com/app/profile/ahmadsalehnasution/viz/USFlightDelayJun2003-Mar2023/USFlightDelayJun2003-Mar2023">See the Project</a>
+		<li class="expanded"><a class="on"> <b>US Flight Dashboard – Personal Project - Kuala Lumpur, Malaysia 2023</b></a> <a href="https://public.tableau.com/app/profile/ahmadsalehnasution/viz/USFlightDelayJun2003-Mar2023/USFlightDelayJun2003-Mar2023">See the Project</a>
 			<ol class="submuneu">
 			<li><a>Create a dashboard with Tableau for the statistical cause of the delayed flight in the US</li>
 			<li><a>Transformed and processed data by using Excel to ensure data completeness and validity</li>	
