--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
+	<a href="https://github.com/ahmadsalehnasution" class="github"><i class="icofont-github"></i></a>      
         <a href="https://twitter.com/ahmad_saleh17" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.facebook.com/ahmad.saleh17" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/ahmad.saleh.nasution/" class="instagram"><i class="icofont-instagram"></i></a>
