dasboard stock usingg google looker studio

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,12 @@
 <div class="leftsidebar_templ1">
 	<ul id="nav">
 
+		<li class="expanded"><a class="on"> <b>Dashboard and Stock screener – Personal Project - Kuala Lumpur, Malaysia 2025</b></a> <a href="https://lookerstudio.google.com/u/0/reporting/e931a4e1-75fd-41f2-97d4-adba5bd99815/page/iV5LF">See the Project</a>
+			<ol class="submuneu">
+			<li><a>Create a dashboard with Google Looker Studio for dashboard and stock screener</li>
+			<li><a>Transformed and processed data by using Google Sheets to ensure data completeness and validity</li>	
+			</ol>
+
 		<li class="expanded"><a class="on"> <b>Gold Performance – Personal Project - Kuala Lumpur, Malaysia 2024</b></a> <a href="https://public.tableau.com/app/profile/ahmadsalehnasution/viz/GOLDPERFORMANCE/Dasboard">See the Project</a>
 			<ol class="submuneu">
 			<li><a>Create a dashboard with Tableau for the Gold Performance</li>
