--- a/portfolio.html
+++ b/portfolio.html
@@ -124,18 +124,12 @@
 			<li class="expanded"><a class="on"> <b>Arta Cyber, Website Developer – Personal Project – Kuala Lumpur, Malaysia 2016</b></a> <a href="https://artacyber.com">See the Project</a>
 			<ol class="submuneu">
 			<li><a>Develop and maintain a website hosted on WordPress/WP Engine</li>
-			<li><a>Monitoring website traffic using Google Analytics, Implementing updates, upgrades, and patches of the WP Engine</li>	
+			<li><a>Monitoring website traffic using Google Analytics, implementing updates, upgrades, and patches of the WP Engine</li>	
 			</ol>
 		
 		
 	</ul>
 </div>
-
-
-<iframe title="CR7 VS Messi" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZDI1YWVjZWYtMDNiZi00ZTAxLThiZjAtYWE2Mzk0MTQ3MjZhIiwidCI6ImZiY2I1MjYyLThmNGUtNDVmMi05ZTA3LWNjZGJlODE4NjVlMyJ9" frameborder="0" allowFullScreen="true"></iframe>
-
-
-
 	      
        
     </section><!-- End Portfolio Section -->
