--- a/dasboard.html
+++ b/dasboard.html
@@ -84,7 +84,7 @@
           <h2>DASBOARD</h2>
           <p>
 		  
-Dasboard Analisys
+Dashboard Analysis
       		  </p><br>  
         </div>
 
@@ -92,11 +92,12 @@ DASHBOARD FIFA 2014-2023
 </p><be> 
 
 
-CR7 VS Messi
-</p><br>  
+
 <iframe title="DASHBOARD FIFA 2014-2023" width="1024" height="1060" src="https://app.powerbi.com/view?r=eyJrIjoiZWYxZjU5NjQtNGUwYi00YjhlLWJlZDItYjYxZmU4OWQxMGRlIiwidCI6ImZiY2I1MjYyLThmNGUtNDVmMi05ZTA3LWNjZGJlODE4NjVlMyJ9" frameborder="0" allowFullScreen="true"></iframe>
 
-
+CR7 VS Messi
+</p><br>  
+	
 <iframe title="CR7 VS Messi" width="1024" height="1060" src="https://app.powerbi.com/view?r=eyJrIjoiZDI1YWVjZWYtMDNiZi00ZTAxLThiZjAtYWE2Mzk0MTQ3MjZhIiwidCI6ImZiY2I1MjYyLThmNGUtNDVmMi05ZTA3LWNjZGJlODE4NjVlMyJ9" frameborder="0" allowFullScreen="true"></iframe>
 	      
 		
