--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
 			<li><a>Aggregated and visualized the data by using pandas, matplotlib and seaborn to compile a professional report </li>	
 			</ol>
 		
-		<li class="expanded"><a class="on"> <b>FIFA 2023 Dashboard – Personal Project - Kuala Lumpur, Malaysia 2023</b></a> <a href="https://ahmadsalehnasution.github.io/dasboard-fifa.html">See the Project</a>
+		<li class="expanded"><a class="on"> <b>FIFA 2023 Dashboard – Personal Project - Kuala Lumpur, Malaysia 2023</b></a> <a href="https://ahmadsalehnasution.github.io/dasboards/fifa.html">See the Project</a>
 			<ol class="submuneu">
 			<li><a>Created a dashboard with Power Bi to see the performance of football clubs and players</li>
 			<li><a>Compare overall rating, wage, value, and player statistics of L. Messi VS Cristiano Ronaldo</li>	
