--- a/dashboard-fifa.html
+++ b/dashboard-fifa.html
@@ -81,7 +81,7 @@
 
 
         <div class="section-title">
-          <h2>DASBOARD</h2>
+          <h2>DASHBOARD</h2>
 		  
           <p> Dashboard Analysis </p><br>  
         </div>
